--- a/html/style/style.css
+++ b/html/style/style.css
@@ -1,15 +1,10 @@
-.container {
-  position: relative;
-  width: 500px;
-  height: 500px;
-  border: 1px solid #000;
+#_body {
+  background: linear-gradient(45deg, #ff7e5f, #feb47b, #86a8e7, #91eae4);
 }
-.random-button {
-  position: absolute;
-  padding: 10px 20px;
-  background-color: #4caf50;
-  color: white;
-  border: none;
-  cursor: pointer;
-  transition: top 0.3s ease-out, left 0.3s ease-out;
+
+.img-fluid {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
 }
